# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamlfmt  .yamllint  README.md  mise.toml  pyproject.toml  renovate.json5
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-15-pre-commit-wrappers.md
docs/superpowers/specs/: 2026-06-15-pre-commit-wrappers-design.md
hooks/: pin-github-actions.py  run-tool.sh
tests/: test_hooks_integration.py  test_pin_github_actions.py  test_run_tool.py
tests/files/: clean.md  clean.sh  clean.sql  clean.yaml  clean_py.py  clean_workflow.yml
